--- a/web.html
+++ b/web.html
@@ -81,7 +81,11 @@
     </div>
   </div>
   <script src="utils.js" charset="utf-8"></script>
-  <script src="mapMaker.js" charset="utf-8"></script>
-  <script src="script.js" charset="utf-8"></script>
+  <script src="Skill.js" charset="utf-8"></script>
+  <script src="Unit.js" charset="utf-8"></script>
+  <script src="Tile.js" charset="utf-8"></script>
+  <script src="DungeonMapMaker.js" charset="utf-8"></script>
+  <script src="DrawObject.js" charset="utf-8"></script>
+  <script src="script1.js" charset="utf-8"></script>
 </body>
 </html>
