--- a/web.html
+++ b/web.html
@@ -87,5 +87,6 @@
   <script src="DungeonMapMaker.js" charset="utf-8"></script>
   <script src="DrawObject.js" charset="utf-8"></script>
   <script src="script1.js" charset="utf-8"></script>
+  <script src="Game.js" charset="utf-8"></script>
 </body>
 </html>
