--- a/web.html
+++ b/web.html
@@ -109,7 +109,7 @@
   <script src="Skill1.js" charset="utf-8"></script>
   <script src="Unit1.js" charset="utf-8"></script>
   <script src="Tile1.js" charset="utf-8"></script>
-  <script src="DungeonMapMaker1.js" charset="utf-8"></script>
+  <script src="DungeonMapMaker.js" charset="utf-8"></script>
   <script src="DrawObject.js" charset="utf-8"></script>
   <script src="GameModule.js" charset="utf-8"></script>
   <script src="DemoGameModule.js" charset="utf-8"></script>
