--- a/web.html
+++ b/web.html
@@ -83,15 +83,14 @@
   <div class="container">
     <canvas id="background"></canvas>
     <canvas id="canvas"></canvas>
+    <div class="fps">
+      FPS: <span id="fps"></span>
+    </div>
+    <div style="position: relative;">
+      <span style="position:absolute; left:6.3%; top:200px;" id="time"></span>
+    </div>
   </div>
-  <!-- <div style="background: white;position:absolute;top:document.body.clientWidth/2;left:document.body.clientHeight;">
-    Типо менюшечка
-  </div> -->
-  <div class="fps">
-    FPS: <span id="fps"></span>
-  </div>
-  <div style="position: relative;">
-    <span style="position:absolute; left:6.3%; top:200px;" id="time"></span>
+  <div hidden id="menu" style="background: yellow; padding: 5px;position:absolute;top:45vh;left:45vw;">
   </div>
   <script src="Utils.js" charset="utf-8"></script>
   <script src="Entity.js" charset="utf-8"></script>
