--- a/web.html
+++ b/web.html
@@ -66,10 +66,22 @@
     }
   </style>
   <script id="2d-vertex-shader" type="notjs">
-    attribute vec2 a_position; attribute vec2 a_texcoord; uniform vec2 u_translation; varying vec2 v_texcoord; void main() { gl_Position = vec4(a_position + u_translation, 0, 1); v_texcoord = a_texcoord; }
+    attribute vec2 a_position;
+    attribute vec2 a_texcoord;
+    uniform vec2 u_translation;
+    varying vec2 v_texcoord;
+    void main() {
+      gl_Position = vec4(a_position + u_translation, 0, 1); 
+      v_texcoord = a_texcoord;
+    }
   </script>
   <script id="2d-fragment-shader" type="notjs">
-    precision mediump float; uniform sampler2D u_texture; varying vec2 v_texcoord; void main() { gl_FragColor = texture2D(u_texture, v_texcoord); }
+    precision mediump float;
+    uniform sampler2D u_texture;
+    varying vec2 v_texcoord;
+    void main() {
+      gl_FragColor = texture2D(u_texture, v_texcoord);
+    }
   </script>
   <script id="2d-vertex-shader2" type="notjs">
     attribute vec2 a_position; uniform vec2 u_translation; uniform vec4 u_color; varying vec4 v_color; void main() { gl_Position = vec4(a_position + u_translation, 0, 1); v_color = u_color; }
