It's nice version for gaming

--- a/web.html
+++ b/web.html
@@ -99,7 +99,7 @@
       FPS: <span id="fps"></span>
     </div>
     <div style="position: relative;">
-      <span style="position:absolute; left:6.3%; top:200px;" id="time"></span>
+      <span style="position:absolute; left:6.3vw; top:31vh;" id="time"></span>
     </div>
   </div>
   <div hidden id="menu" style="background: yellow; padding: 5px;position:absolute;top:45vh;left:45vw;">
