--- a/web.html
+++ b/web.html
@@ -20,23 +20,25 @@
   </div>
   <div hidden id="menu" style="background: yellow; padding: 5px;position:absolute;top:45vh;left:45vw;">
   </div>
-  <script src="shaders.js" charset="utf-8"></script>
+  <script src="Utils.js" charset="utf-8"></script>
+  <script src="Shaders.js" charset="utf-8"></script>
+  <script src="State.js" charset="utf-8"></script>
   <script src="GraphicEngine.js" charset="utf-8"></script>
   <script src="GameManager.js" charset="utf-8"></script>
+  <script src="UnitManager.js" charset="utf-8"></script>
+  <script src="AnimationManager.js" charset="utf-8"></script>
   <script src="SpriteManager.js" charset="utf-8"></script>
-  <script src="Utils.js" charset="utf-8"></script>
-  <script src="Api.js" charset="utf-8"></script>
   <script src="Animation.js" charset="utf-8"></script>
-  <script src="Pathfinding.js" charset="utf-8"></script>
   <script src="Entity.js" charset="utf-8"></script>
   <script src="Program.js" charset="utf-8"></script>
-  <script src="loader.js" charset="utf-8"></script>
+  <script src="Loader.js" charset="utf-8"></script>
   <script src="Background.js" charset="utf-8"></script>
-  <script src="Skill1.js" charset="utf-8"></script>
-  <script src="Unit1.js" charset="utf-8"></script>
-  <script src="Tile1.js" charset="utf-8"></script>
+  <script src="Sprite.js" charset="utf-8"></script>
+  <script src="Pathfinding.js" charset="utf-8"></script>
+  <script src="Skill.js" charset="utf-8"></script>
+  <script src="Unit.js" charset="utf-8"></script>
+  <script src="Tile.js" charset="utf-8"></script>
   <script src="DungeonMapMaker.js" charset="utf-8"></script>
-  <script src="DrawObject.js" charset="utf-8"></script>
   <script src="GameModule.js" charset="utf-8"></script>
   <script src="DemoGameModule.js" charset="utf-8"></script>
   <script src="InitiativeLine.js" charset="utf-8"></script>
